--- a/index.html
+++ b/index.html
@@ -23,24 +23,22 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <header id="header">
-        <h1><span>GreenSock 101</span><em></em></h1>
-        <p class="intro">Your first hour with GSAP, <br /><em>make sure it is a good one</em>.</p>
+    
+        <img id="knob" src="img/wheel.png" alt="" width="800px" height="800px" align="middle">
 
-        <img src="img/blob.svg" alt="">
+        <img id="anchor" src="img/anchor.png" alt="" width="100px" height="50px" align="middle">
 
         
-    </header>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenLite.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TimelineLite.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/plugins/CSSPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/easing/EasePack.min.js"></script>
 
-    <script src="src/js/main.js"></script>
+    <script src="main.js"></script>
 
 </body>
 </html>
