--- a/forgot.html
+++ b/forgot.html
@@ -13,7 +13,7 @@
 	<div class="container">
     <form id="forgotForm">
         <div class="logo">
-            <img src="images\logo.jpg" /> 
+            <img src="img\logo.jpg" /> 
         </div>
         <div>
             <p><input type="email" placeholder="Email Address..." pattern ="^([a-zA-Z0-9@*#]{8,15})$" required /></p>      
