--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
 	<div class="container">
     <form id="registerForm">
         <div class="logo">
-            <img src="images\logo.jpg" /> 
+            <img src="img\logo.jpg" /> 
         </div>
         <div>
 			<p><input type="text" placeholder="Username..." required/></p>
