inserted div for buttons

--- a/forgot.html
+++ b/forgot.html
@@ -22,8 +22,10 @@
 				<div class="form-group">
 					<input type="email" id = "resetThis"  placeholder="Email Address..." pattern ="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" required />      
 				</div>
+					<div>
 			<button type="submit" onclick="resetPassword()">Reset</button></p>
 			<button type="submit" onclick="window.location.href = 'register.html';">Sign Up</button></p>
+				</div>
 		</form>
 			</section>
 		</section>
