--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
-<!DOCTYPE html>
-
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
 	<meta type="viewpoint" content="width=device-width, initial-scale=1">
-    <title>Login</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="css/global.css">
-	<script type="text/javascript" src="particles.js"></script>
-	<script src="loginFunction.js"></script>
-</head>
-<body id="particles-js">
+    <title>Start Page</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="css/start.css">
+		<link rel="stylesheet" type="text/css" href="css/global.css">
+	 <style>
+        .button1 {
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            border: none;
+            cursor: pointer;
+            width: 250px;
+        }
+    </style>
+	</head>
+	<body id="particles-js">
 	<section class="container-fluid bg">
 		<section class="row justify-content-center">
 			<section class="col-12 col-sm-6 col-md-3">
-				<form class="form-container">
-        <div class="logo">
-            <img src="img\logo.jpg" /> 
+			<form class="form-container">	
+		<img src="img\name.png" /> 
+		<div class="wheel">
+		    <img src="img\wheel.png" /> 
+	    </div>
+        <div>
+            <a href="login.html" class="button1">Sign In</a>
+            <a href="register.html" class="button1">Sign Up</a>
         </div>
-        <div class="form-group">
-            <input type="email" id="email" placeholder="Email Address..." pattern ="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$"/> <!--required--> 
-			</div>
-        <div class="form-group">
-            <input type="password" id="password" placeholder="Password..." /><!--required-->
-            <p><a href="forgot.html">Forgot Password?</a></p>
-            <a href="gamePage.html" type="button submit">Sign In</a>
-        </div>
-        <div >
-          <!--may have to redo button with the div onclick thing so that it works properly with the function
-              from the loginFunction.js-->
-        </div> 
-
-		</form>
-			</section>
+	        </form>
+	        </section>
 		</section>
 	</section>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="particles.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 	</body>
 </html>
