--- a/gamePage.html
+++ b/gamePage.html
@@ -19,6 +19,7 @@
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     <script src="js.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="particles.js"></script>
     <link rel="stylesheet" type="text/css" href="css/game.css">
     <style>
 
@@ -131,6 +132,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/plugins/CSSPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/easing/EasePack.min.js"></script>
     <script src="main.js"></script>
+ <script type="text/javascript" src="app.js"></script>
 </body>
 
 </html>
