added id particles to body

--- a/gamePage.html
+++ b/gamePage.html
@@ -55,7 +55,7 @@
     </style>
 </head>
 
-<body onload="displayCredits()">
+<body onload="displayCredits()" id="particles-js">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
         <div class="container">
