--- a/gamePage.html
+++ b/gamePage.html
@@ -108,18 +108,19 @@
         <div id="aside-right">
             <div class="wheelDiv-column">
                 <img src="img/wheel.png" width="250" height="250" />
+                <br /><button onclick="spin()">Spin</button>
             </div>
         </div>
         <div id="footer">
             <div class="spinDiv-column">
-                <button onclick="spin()">Spin</button>
+               
             </div>
         </div>
 
-       <!---- <div id="confirm">
+        <div id="confirm">
             <div class="message">Welcome to <br /><b>fantastic 5's WHEEL OF FORTUNE!</b><br /> Here is a step by step tutorial on how to play.<br />Players are allocated with 100 credits on the first session.<br />Select a bet amount by using the slider - note, only increments of 10 are allowed, with a minimum bet of 10 credits.<br />Once you've selected your bet, press SPIN!<br />And await your result.</div><br>
             <button class="yes">Let's try!</button>
-        </div>-->
+        </div>
 
     </div>
 
