Changed spin button's id

--- a/gamePage.html
+++ b/gamePage.html
@@ -220,7 +220,7 @@
                     
                     </svg>
                     
-                    <br /><button onclick="spin()">Spin</button>
+                    <br /><button id="btnSpin">Spin</button>
             </div>
 
         </div>
