sign in link is now a button

--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
         <div class="form-group">
             <input type="password" id="password" placeholder="Password..." /><!--required-->
             <p><a href="forgot.html">Forgot Password?</a></p>
-            <a href="loadingPage.html" type="button submit">Sign In</a>
+            <a href="loadingPage.html" class="btn" type="button submit">Sign In</a>
         </div>
         <div >
           <!--may have to redo button with the div onclick thing so that it works properly with the function
