added css to page

--- a/loadingPage.html
+++ b/loadingPage.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
+<title>Game Loading</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="loginFunction.js"></script>
-    <link rel="stylesheet" type="text/css" href="playButton.css">
-    <style>
+        <style>
         /* Center the loader */
         #loader {
             position: absolute;
@@ -14,13 +14,14 @@
             width: 150px;
             height: 150px;
             margin: -75px 0 0 -75px;
-            border: 16px solid #f3f3f3;
+            border: 16px solid red;
             border-radius: 50%;
-            border-top: 16px solid #3498db;
+            border-top: 16px solid orange;
             width: 120px;
             height: 120px;
             -webkit-animation: spin 2s linear infinite;
             animation: spin 2s linear infinite;
+			
         }
 
         @-webkit-keyframes spin {
@@ -50,6 +51,7 @@
             -webkit-animation-duration: 1s;
             animation-name: animatebottom;
             animation-duration: 1s
+			
         }
 
         @-webkit-keyframes animatebottom {
@@ -79,29 +81,34 @@
         #myDiv {
             display: none;
             text-align: center;
+			
         }
+		body{
+		background:linear-gradient(to right, red , yellow);
+		
+		}
     </style>
 </head>
 <body onload="myFunction()" style="margin:0;">
 
-    <div id="loader"></div>
+    <div id="loader" style="background:white;"></div>
 
-    <div style="display:none;" id="myDiv" class="animate-bottom">
-        <h2>Start Game!</h2>
+    <div style="display:none; position:relative;" id="myDiv" class="animate-bottom">
+        <h2>Start Game...</h2>
         <img src="icons8-play-90.png" onclick="test()" />
     </div>
 
     <script>
-var myVar;
+		var myVar;
 
-function myFunction() {
-  myVar = setTimeout(showPage, 3000);
-}
+		function myFunction() {
+		  myVar = setTimeout(showPage, 3000);
+		}
 
-function showPage() {
-  document.getElementById("loader").style.display = "none";
-  document.getElementById("myDiv").style.display = "block";
-}
+		function showPage() {
+		  document.getElementById("loader").style.display = "none";
+		  document.getElementById("myDiv").style.display = "block";
+		}
     </script>
 
 </body>
