--- a/gamePage.html
+++ b/gamePage.html
@@ -104,8 +104,8 @@
                 <p id="resAmount" style="border-radius:5px;"></p>
 
                 <br />
-                <button onclick="addLiveCredit()">Add Credit</button><br />
-                <br /><button onclick="cashout()">Cash Out</button>
+                <button id="addCred" onclick="addLiveCredit()">Add Credit</button><br />
+                <br /><button id="cashout" onclick="cashout()">Cash Out</button>
             </div>
         </div>
         <div id="aside-right">
