styled the help message

--- a/gamePage.html
+++ b/gamePage.html
@@ -31,11 +31,12 @@
             background-color: #F3F5F6;
             color: #000000;
             border: 1px solid #aaa;
+            font-family:"Times New Roman", Times, serif;
             position: fixed;
             width: 600px;
-            height: 500px;
-            left: 40%;
-            top: 40%;
+            height: 300px;
+            left: 50%;
+            top: 50%;
             box-sizing: border-box;
             text-align: center;
         }
@@ -53,7 +54,7 @@
 
             #confirm .message {
                 text-align: center;
-                background-color: #F3F5F6;
+                background-color: linear-gradient(to right, #9796f0, #fbc7d4);;
             }
     </style>
 </head>
@@ -164,7 +165,7 @@
                                   </text>
                               
                                   <text font-size="42.5" fill="white">  
-                                    <textPath xlink:href="#s10">700</textPath>  
+                                    <textPath xlink:href="#s10">200</textPath>  
                                   </text>
                               
                                   <text font-size="42.5" fill="white">  
