--- a/gamePage.html
+++ b/gamePage.html
@@ -48,7 +48,7 @@
                 border: 4px solid #aaa;
                 padding: 5px;
                 text-align: center;
-                width: 60px;
+                width: auto;
                 cursor: pointer;
             }
 
