--- a/gamePage.html
+++ b/gamePage.html
@@ -42,10 +42,10 @@
         }
 
             #confirm button {
-                background-color: #FFFFFF;
+                background-color: #red;
                 display: inline-block;
                 border-radius: 12px;
-                border: 4px solid #aaa;
+                border: 1px solid #red;
                 padding: 5px;
                 text-align: center;
                 width: auto;
