--- a/gamePage.html
+++ b/gamePage.html
@@ -31,7 +31,6 @@
             background-color: #F3F5F6;
             color: #000000;
             border: 1px solid #aaa;
-            font-family:"Times New Roman", Times, serif;
             position: fixed;
             width: 600px;
             height: 300px;
@@ -42,10 +41,10 @@
         }
 
             #confirm button {
-                background-color: #red;
+                background-color: red;
                 display: inline-block;
                 border-radius: 12px;
-                border: 1px solid #red;
+                border: 1px solid red;
                 padding: 5px;
                 text-align: center;
                 width: auto;
@@ -54,7 +53,8 @@
 
             #confirm .message {
                 text-align: center;
-                background-color: linear-gradient(to right, #9796f0, #fbc7d4);;
+                background-color: linear-gradient(to right, #9796f0, #fbc7d4);
+             font-family:"Times New Roman", Times, serif;
             }
     </style>
 </head>
