--- a/gamePage.html
+++ b/gamePage.html
@@ -41,8 +41,9 @@
         }
 
             #confirm button {
-                background-color: red;
+                background-color: black;
                 display: inline-block;
+                color:white;
                 border-radius: 12px;
                 border: 1px solid red;
                 padding: 5px;
@@ -53,8 +54,8 @@
 
              .message {
                 text-align: center;
-                background-color: linear-gradient(to right, #9796f0, #fbc7d4);
-             font-family:"Times New Roman", Times, serif;
+                background-color: green;
+                font-family:"Times New Roman", Times, serif;
             }
     </style>
 </head>
