updating the css for help alert

--- a/gamePage.html
+++ b/gamePage.html
@@ -28,10 +28,11 @@
        
       #confirm {
             display: none;
-            background-color: #F3F5F6;
+            background-color: linear-gradient(to bottom right, #9796f0, #fbc7d4);;
             color: #000000;
             border: 1px solid #aaa;
-            position: fixed;
+       border-radius:5px;
+            position: relative;
             width: 600px;
             height: 300px;
             left: 50%;
@@ -52,7 +53,7 @@
                 cursor: pointer;
             }
 
-             .message {
+             #confirm .message {
                 text-align: center;
                 background-color: green;
                 font-family:"Times New Roman", Times, serif;
