--- a/gamePage.html
+++ b/gamePage.html
@@ -28,10 +28,10 @@
        
       #confirm {
             display: none;
-            background-color: linear-gradient(to bottom right, #9796f0, #fbc7d4);;
+            background-color: linear-gradient(to bottom right, #9796f0, #fbc7d4);
             color: #000000;
             border: 1px solid #aaa;
-       border-radius:5px;
+            border-radius:5px;
             position: relative;
             width: 600px;
             height: 300px;
@@ -46,16 +46,17 @@
                 display: inline-block;
                 color:white;
                 border-radius: 12px;
-                border: 1px solid red;
+                border: 1px solid black;
                 padding: 5px;
                 text-align: center;
                 width: auto;
                 cursor: pointer;
             }
 
-             #confirm .message {
+              .message {
                 text-align: center;
-                background-color: green;
+                background-color: linear-gradient(to bottom right, #9796f0, #fbc7d4);
+                
                 font-family:"Times New Roman", Times, serif;
             }
     </style>
