reverse back help alert css

--- a/gamePage.html
+++ b/gamePage.html
@@ -28,36 +28,32 @@
        
       #confirm {
             display: none;
-            background-color: linear-gradient(to bottom right, #9796f0, #fbc7d4);
+            background-color: #F3F5F6;
             color: #000000;
             border: 1px solid #aaa;
-            border-radius:5px;
-            position: relative;
+            position: fixed;
             width: 600px;
-            height: 300px;
-            left: 50%;
-            top: 50%;
+            height: 500px;
+            left: 40%;
+            top: 40%;
             box-sizing: border-box;
             text-align: center;
         }
 
             #confirm button {
-                background-color: black;
+                background-color: #FFFFFF;
                 display: inline-block;
-                color:white;
                 border-radius: 12px;
-                border: 1px solid black;
+                border: 4px solid #aaa;
                 padding: 5px;
                 text-align: center;
-                width: auto;
+                width: 60px;
                 cursor: pointer;
             }
 
-              .message {
+             #confirm .message {
                 text-align: center;
-                background-color: linear-gradient(to bottom right, #9796f0, #fbc7d4);
-                
-                font-family:"Times New Roman", Times, serif;
+                background-color: #F3F5F6;
             }
     </style>
 </head>
