--- a/gamePage.html
+++ b/gamePage.html
@@ -28,33 +28,33 @@
        
       #confirm {
             display: none;
-            background-color: #F3F5F6;
-            color: #000000;
+            background: linear-gradient(to bottom, #1565C0 0%, #b92b27 100%);
+            color: floralwhite;
             border: 1px solid #aaa;
+            font-family: "Times New Roman", Times, serif;
             position: fixed;
             width: 600px;
-            height: 500px;
-            left: 40%;
-            top: 40%;
+            height: 300px;
+            left: 35%;
+            top: 35%;
             box-sizing: border-box;
             text-align: center;
         }
 
-            #confirm button {
-                background-color: #FFFFFF;
+            .message button { 
                 display: inline-block;
                 border-radius: 12px;
-                border: 4px solid #aaa;
+                border: 1px solid red;
                 padding: 5px;
                 text-align: center;
-                width: 60px;
+                width: auto;
                 cursor: pointer;
             }
 
-             #confirm .message {
-                text-align: center;
-                background-color: #F3F5F6;
-            }
+        #confirm .yes {
+            text-align: center;
+            background:red;
+        }
     </style>
 </head>
 
