--- a/gamePage.html
+++ b/gamePage.html
@@ -240,7 +240,7 @@
         </div>
 
         <div id="confirm">
-            <div class="message"><p>Welcome to <br /><b>Fantastic 5's WHEEL OF FORTUNE!</b><br /> Here is a step by step tutorial on how to play.<br />Players are allocated with 100 credits on the first session.<br />Select a bet amount by using the slider - note, only increments of 10 are allowed, with a minimum bet of 10 credits.<br />Once you've selected your bet, press SPIN!<br />And await your result</p>.</div><br>
+            <div class="message">Welcome to <br /><b>Fantastic 5's WHEEL OF FORTUNE!</b><br /> Here is a step by step tutorial on how to play.<br />Players are allocated with 100 credits on the first session.<br />Select a bet amount by using the slider - note, only increments of 10 are allowed, with a minimum bet of 10 credits.<br />Once you've selected your bet, press SPIN!<br />And await your result.</div><br>
             <button class="yes">Let's try!</button>
         </div>
 
