--- a/gamePage.html
+++ b/gamePage.html
@@ -116,8 +116,8 @@
 
                 
                         <g class="wheel" id="wheel">
-                            <path id="szele" d="M509.6,46.5C333.8-32.8,127.1,45.4,47.9,221.2A349.1,349.1,0,0,0,149.6,638.6C301,758,520.6,732.1,640,580.7a348.9,348.9,0,0,0,.9-430.9,357,357,0,0,0-27.6-31.3A348.6,348.6,0,0,0,509.6,46.5Z" transform="translate(0)" fill="#fff" />
-                            <path d="M500.1,67.5C350-.3,172.9,54.6,87.3,195.3,9.1,323.4,28.8,488.4,134.8,594.7a340.6,340.6,0,0,0,29.1,25.9c141.2,111.7,346.2,87.8,457.9-53.4a326.1,326.1,0,0,0,1-403.3A376.4,376.4,0,0,0,597,134.7,326.5,326.5,0,0,0,500.1,67.5Z" transform="translate(0)" fill="#d2a679" />
+                            <path id="szele" d="M509.6,46.5C333.8-32.8,127.1,45.4,47.9,221.2A349.1,349.1,0,0,0,149.6,638.6C301,758,520.6,732.1,640,580.7a348.9,348.9,0,0,0,.9-430.9,357,357,0,0,0-27.6-31.3A348.6,348.6,0,0,0,509.6,46.5Z" transform="translate(0)" fill="#d2a679" />
+                            <path d="M500.1,67.5C350-.3,172.9,54.6,87.3,195.3,9.1,323.4,28.8,488.4,134.8,594.7a340.6,340.6,0,0,0,29.1,25.9c141.2,111.7,346.2,87.8,457.9-53.4a326.1,326.1,0,0,0,1-403.3A376.4,376.4,0,0,0,597,134.7,326.5,326.5,0,0,0,500.1,67.5Z" transform="translate(0)" fill="#3f3c42" />
                             <g>
                                 <g>
                                     <path id="s1" d="M201.7,83.1A323.1,323.1,0,0,0,82.8,202.9L365.9,364.7Z" transform="translate(0)" fill="#FE5700" />
