updated img tag

--- a/gamePage.html
+++ b/gamePage.html
@@ -89,7 +89,7 @@
     </nav>
     <!-- Page Content -->
     <div id="image">
-        <img src="img/name.png" width="700px" height="150px" />
+        <img src="img/name.png" style="width:100%;" />
     </div>
     <div id="container">    
         <div id="aside-left">
