--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		    <img src="img\wheel.png" /> 
 	    </div>
         <div>
-            <a href="login.html" class="button1">Sign In</a>
+            <a href="gamePage.html" class="button1">Sign In</a>
             <a href="register.html" class="button1">Sign Up</a>
         </div>
 	        </form>
